Revise contact names and hero subtitle for clarity
Updated contact names to include professional titles and adjusted subtitles for clarity.

--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
           <!-- Título principal com destaques em gradiente laranja -->
 
           <div class="hero-subtitle">
-            Auditoria técnica de contratos de energia – Xerfan Tech Lab + ADS
-            Elétrica
+            Auditoria técnica de contratos de energia – ADS Elétrica + Xerfan Tech Lab  
           </div>
           <!-- Subtítulo em maiúsculas -->
 
           <p class="hero-text">
-            Especialistas em engenharia elétrica aplicada à gestão de contratos
+            Especialistas em elétrica aplicada à gestão de contratos
             de energia, auditoria tarifária e eficiência energética para
             empresas que buscam redução de custos real e mensurável.
           </p>
@@ -447,7 +446,7 @@
           <div class="contact-card">
             <!-- Card de contato - Rodrigo -->
 
-            <div class="contact-name">Rodrigo</div>
+            <div class="contact-name">Rodrigo Xerfan - Eletrotécnico</div>
             <!-- Nome em destaque laranja -->
 
             <div class="contact-company">
@@ -459,7 +458,7 @@
           <div class="contact-card">
             <!-- Card de contato - Alex dos Santos -->
 
-            <div class="contact-name">Alex dos Santos</div>
+            <div class="contact-name">Alex dos Santos - Eletrotécnico</div>
             <!-- Nome em destaque laranja -->
 
             <div class="contact-company">
