Remove email from contact section
Removed email address from contact section.

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             </div>
             <!-- Empresa -->
 
-            <div class="contact-email">santos_alex@id.uff.br</div>
+            <div class="contact-email"></div>
             <!-- Email em branco -->
           </div>
         </div>
