Update copyright notice in footer

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <div class="footer-copyright">
           <!-- Linha de copyright -->
 
-          © 2025 ADS Elétrica + Xerfan Tech Lab. Todos os direitos reservados.
+          © 2025 Xerfan Tech Lab. Todos os direitos reservados.
           <!-- Texto de copyright -->
         </div>
       </div>
